# design-patterns

./: .gitignore  CMakeLists.txt  README.md  main.cpp  visitor_gof.cpp  visitor_gof.h
head_first/: strategy.cpp  strategy.h
iglberger/: adaptor_class.cpp  adaptor_class.h  adaptor_function.cpp  adaptor_function.h  adaptor_object.cpp  adaptor_object.h  command_ref_sem.cpp  command_ref_sem.h  command_val_sem.cpp  command_val_sem.h  crtp.cpp  decorator_compile_time.cpp  decorator_ref.cpp  decorator_ref.h  extern_polymorph.cpp  observer_pull.h  observer_push.h  prototype.cpp  prototype.h  singleton.cpp  singleton.h  strategy_ref_sem.cpp  strategy_ref_sem.h  strategy_val_sem.cpp  strategy_val_sem.h  type_erasure.h  type_erasure_sbo.cpp  type_erasure_sbo.h  visitor_acyclic.cpp  visitor_acyclic.h  visitor_gof.cpp  visitor_gof.h  visitor_variant.cpp  visitor_variant.h
iglberger/04_visitor/: visitor_acyclic.h  visitor_gof.cpp  visitor_variant.cpp
iglberger/05_command/: command_ref_sem.cpp  command_val_sem.cpp
iglberger/05_strategy/: strategy_ref_sem.cpp  strategy_ref_sem.h  strategy_val_sem.h
iglberger/06_adapter/: adaptor_class.h  adaptor_function.h  adaptor_object.h
iglberger/06_crtp/: crtp.h
iglberger/06_observer/: observer_pull.cpp  observer_pull.h  observer_push.cpp  observer_push.h
iglberger/07_bridge/: electric_car.cpp  person.h
iglberger/07_extern_poly/: extern_polymorph.h
iglberger/08_type_erasure/: type_erasure.cpp
iglberger/09_decorator/: decorator_compile_time.h
iglberger/bridge/: abstract_engine.h  car.h  electric_car.h  electric_engine.h  person.cpp  person.h
nesteruk/03_factory/: abstract_factory.h  factory_method.h  inner_factory.h
